# ncs_people_detection

./: CMakeLists.txt  README.md  package.xml
launch/: cv_camera.launch  ncs_people_detection.launch  ncs_people_detection_params.yaml  ncs_people_detection_with_camera.launch
src/: ncs_people_detection.py
